<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <import type="android.text.InputType" />

        <variable
            name="registerView"
            type="com.devmobile.android.restaurant.view.activities.authentication.FormActivity" />

        <variable
            name="registerViewModel"
            type="com.devmobile.android.restaurant.viewmodel.authentication.FormViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/registerContainer"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingHorizontal="16dp">

        <include
            android:id="@+id/inputUserName"
            layout="@layout/layout_text_input"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="64dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <include
            android:id="@+id/inputUserLastName"
            layout="@layout/layout_text_input"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginVertical="86dp"
            app:layout_constraintEnd_toEndOf="@id/inputUserName"
            app:layout_constraintStart_toStartOf="@id/inputUserName"
            app:layout_constraintTop_toTopOf="@id/inputUserName" />

        <include
            android:id="@+id/inputUserEmail"
            layout="@layout/layout_text_input"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginVertical="86dp"
            app:layout_constraintEnd_toEndOf="@id/inputUserLastName"
            app:layout_constraintStart_toStartOf="@id/inputUserLastName"
            app:layout_constraintTop_toTopOf="@id/inputUserLastName" />

        <include
            android:id="@+id/inputUserPassword"
            layout="@layout/layout_text_input"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginVertical="86dp"
            app:layout_constraintEnd_toEndOf="@id/inputUserEmail"
            app:layout_constraintStart_toStartOf="@id/inputUserEmail"
            app:layout_constraintTop_toTopOf="@id/inputUserEmail" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guidelineVertical"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.5" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/buttonCancelRegister"
            style="@style/Button.Login.Style.Local"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="32dp"
            android:fontFamily="@font/din_regular"
            android:onClick="@{() -> registerView.cancelRegister()}"
            android:text="@string/button_cancel_register"
            android:textColor="@color/black_two"
            android:textSize="18sp"
            app:backgroundTint="@color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/guidelineVertical"
            app:layout_constraintStart_toStartOf="parent"
            app:strokeColor="@color/black_two"
            app:strokeWidth="1dp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/buttonConfirmRegister"
            style="@style/Button.Login.Style.Local"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="32dp"
            android:fontFamily="@font/din_regular"
            android:onClick="@{() -> registerView.nextRegister()}"
            android:text="@string/button_confirm_register"
            android:textColor="@color/white"
            android:textSize="18sp"
            app:backgroundTint="@color/green_dark_two"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/guidelineVertical" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>